[gd_scene load_steps=4 format=2]

[ext_resource path="res://levels/level1WaveBased/DiveZoneExtents.gd" type="Script" id=1]
[ext_resource path="res://levels/level1WaveBased/Debug.gd" type="Script" id=2]
[ext_resource path="res://levels/level1WaveBased/Waves/wave1.gd" type="Script" id=3]

[node name="waveStarter" type="Node2D"]
script = ExtResource( 3 )

[node name="viewport_hint" type="Polygon2D" parent="."]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -320, -180, -320, 180, 320, 180, 320, -180 )

[node name="GruntFormationPoints" type="Node2D" parent="."]
modulate = Color( 1, 0, 0, 1 )

[node name="C" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 57, -155 )

[node name="C2" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 114, -156 )

[node name="C3" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 55, -113 )

[node name="C4" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 112, -111 )

[node name="C5" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 56, -67 )

[node name="C7" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 56, -28 )

[node name="C8" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 116, -28 )

[node name="C9" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 116, 37 )

[node name="C11" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 116, 72 )

[node name="C13" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 116, 99 )

[node name="C14" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 53, 99 )

[node name="C15" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 53, 130 )

[node name="C12" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 53, 72 )

[node name="C10" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 53, 38 )

[node name="C6" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 116, -68 )

[node name="D" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 175, -52 )

[node name="L" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 176, 77 )

[node name="M" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 115, 130 )

[node name="DiveZoneExtents" type="Node2D" parent="."]
position = Vector2( 0, -7 )
script = ExtResource( 1 )
TopLeft = Vector2( -297, -168 )
BottomRight = Vector2( -70, 181 )

[node name="TopLeft" type="Position2D" parent="DiveZoneExtents"]
position = Vector2( -297, -168 )

[node name="BottomRight" type="Position2D" parent="DiveZoneExtents"]
position = Vector2( -70, 181 )

[node name="EyeZone" type="Node2D" parent="."]
script = ExtResource( 1 )
TopLeft = Vector2( 142, -180 )
BottomRight = Vector2( 320, 183 )

[node name="TopLeft" type="Position2D" parent="EyeZone"]
position = Vector2( 142, -180 )

[node name="BottomRight" type="Position2D" parent="EyeZone"]
position = Vector2( 320, 183 )

[node name="Spawners" type="Node2D" parent="."]
modulate = Color( 0.992157, 0.0823529, 1, 1 )

[node name="Position2D3" type="Position2D" parent="Spawners"]
position = Vector2( 54, 2 )

[node name="EnemyDump" type="Node2D" parent="."]

[node name="BulletsDump" type="Node2D" parent="."]

[node name="Debug" type="Label" parent="."]
anchor_left = -0.488
anchor_top = -0.486
anchor_right = -0.488
anchor_bottom = -0.486
margin_left = 161.0
margin_top = -169.0
margin_right = 290.0
margin_bottom = -155.0
script = ExtResource( 2 )
